# Task20221007

./: .gitignore  CHANGELOG.md  README.md  欧步青-华南虎视觉组实习生任务.md
ArmorDetect/: CMakeLists.txt  README.md  main.cpp
ArmorDetect/Armor/: Armor.hpp  ArmorDetector.cpp  armorBox.cpp
ArmorDetect/Compensate/: compensate.cpp  compensate.hpp
ArmorDetect/ROSopencv/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
ArmorDetect/ROSopencv/Camera/: Camera.cpp
ArmorDetect/Solve/: solve.cpp  solve.hpp
CMAKE1/: CMakeLists.txt
CMAKE1/CMake_Test-master/: CMakeLists.txt
CMAKE1/CMake_Test-master/common/kalman/: CMakeLists.txt
CMAKE1/CMake_Test-master/common/math/: CMakeLists.txt
CMAKE1/CMake_Test-master/modules/: CMakeLists.txt
CMAKE1/CMake_Test-master/modules/A1/: CMakeLists.txt
CMAKE1/CMake_Test-master/modules/M1/: CMakeLists.txt
CMAKE1/CMake_Test-master/modules/M2/: CMakeLists.txt
CMAKE1/common/: CMakeLists.txt
CMAKE1/common/kalman/: CMakeLists.txt
CMAKE1/common/math/: CMakeLists.txt
CMAKE1/modules/: CMakeLists.txt
CMAKE1/modules/A2/: CMakeLists.txt
CMAKE1/modules/A2/include/: A2.h
CMAKE1/modules/M1/: CMakeLists.txt
CMAKE1/modules/M2/: CMakeLists.txt
CMAKE2/: CMakeLists.txt
CMAKE2/common/: CMakeLists.txt
CMAKE2/common/rmath/: CMakeLists.txt
CMAKE2/common/singleton/: CMakeLists.txt
CMAKE2/modules/: CMakeLists.txt
CMAKE2/modules/assembly1/: CMakeLists.txt
CMAKE2/modules/assembly2/: CMakeLists.txt
CMAKE2/modules/module1/: CMakeLists.txt
CMAKE2/modules/module2/: CMakeLists.txt
FanDetect/: CMakeLists.txt  Dilate.cpp  Init.cpp  README.md  armor.cpp  fanDetect.cpp  flowStripFan.cpp  general.hpp  main.cpp  param_define.hpp  run.cpp  tool.cpp
FanDetect_final/: CMakeLists.txt  main.cpp  target.cpp  target.hpp
FanDetect_new/: Armor.cpp  Armor.hpp  CMakeLists.txt  Flow.cpp  R.cpp  main.cpp  target.cpp  target.hpp
Kalman/: CMakeLists.txt
Kalman/Armor/: Armor.hpp  matchArmors.cpp
Kalman/kalman/: kalman.cpp  kalman.hpp
Kalman_Armor/: CMakeLists.txt  README.md  main.cpp
Kalman_Armor/Armor/: Armor.hpp  ArmorDetector.cpp  CMakeLists.txt  matchArmors.cpp
Kalman_Armor/Armor/include/: Armor.hpp
Kalman_Armor/Armor/src/: ArmorDetector.cpp  findLights.cpp  lightBar.cpp  matchArmors.cpp
Kalman_Armor/kalman/: CMakeLists.txt  kalman.cpp  kalman.hpp
Kalman_Armor/kalman/include/: kalman.hpp
Kalman_Armor/kalman/src/: kalman.cpp
Kalman_Fan/: CMakeLists.txt  README.md  main.cpp
Kalman_Fan/Compensate/: compensate.cpp  compensate.hpp
Kalman_Fan/Sort/: sort.cpp  sort.hpp
Kalman_Fan/detect/: CMakeLists.txt
Kalman_Fan/detect/Flow/: CMakeLists.txt
Kalman_Fan/detect/Flow/src/: Flow.cpp
Kalman_Fan/detect/R/: CMakeLists.txt
Kalman_Fan/detect/R/include/: R.hpp
Kalman_Fan/detect/R/src/: R.cpp
Kalman_Fan/detect/Sort/: CMakeLists.txt
Kalman_Fan/detect/Sort/src/: sort.cpp
Kalman_Fan/kalman/: kalman.cpp  kalman.hpp
Kalman_Fan/solve/: CMakeLists.txt
Kalman_Fan/solve/Compensate/: CMakeLists.txt  重力补偿公式示意图
Kalman_Fan/solve/Compensate/include/: compensate.hpp
Kalman_Fan/solve/Compensate/src/: compensate.cpp
Kalman_Fan/solve/kalman/: CMakeLists.txt
Kalman_Fan_HYJ/: CMakeLists.txt  main.cpp
Kalman_Fan_HYJ/detect/: CMakeLists.txt
Kalman_Fan_HYJ/detect/Flow/: CMakeLists.txt
Kalman_Fan_HYJ/detect/Flow/include/: Flow.hpp
Kalman_Fan_HYJ/detect/R/: CMakeLists.txt
Kalman_Fan_HYJ/detect/Sort/: CMakeLists.txt
Kalman_Fan_HYJ/detect/Sort/src/: sort.cpp
Kalman_Fan_HYJ/solve/: CMakeLists.txt
Kalman_Fan_HYJ/solve/Compensate/: CMakeLists.txt
Kalman_Fan_HYJ/solve/kalman/: CMakeLists.txt
Kalman_Fan_HYJ/solve/kalman/include/: kalman.hpp
Kalman_Fan_HYJ/solve/kalman/src/: kalman.cpp
exchange_task/: ArmorBox.cpp  ArmorBox.hpp  CMakeLists.txt  exchange.cpp  exchange.hpp  init.cpp  init.hpp  main.cpp  sort.cpp  sort.hpp
exchange_task_final/: ArmorBox.cpp  CMakeLists.txt  README.md  main.cpp  sort.cpp  sort.hpp
exchange_task_final/detect/: CMakeLists.txt
exchange_task_final/detect/exchange/: CMakeLists.txt
exchange_task_final/detect/exchange/include/: exchange.hpp
exchange_task_final/detect/exchange/src/: exchange.cpp
exchange_task_final/detect/init/: CMakeLists.txt
exchange_task_final/detect/init/src/: init.cpp
exchange_task_final/solve/: CMakeLists.txt
exchange_task_final/solve/ArmorBox/: CMakeLists.txt
exchange_task_final/solve/ArmorBox/include/: ArmorBox.hpp
exchange_task_final/solve/ArmorBox/src/: ArmorBox.cpp
exchange_task_final/solve/sort/: CMakeLists.txt
exchange_task_final/solve/sort/src/: sort.cpp
onnx/: CMakeLists.txt  Lenet.onnx  README.md  main.cpp
ros_task/ros_opencv/: CMakeLists.txt  package.xml  ros_opencv.rviz
ros_task/ros_opencv/.kdev4/: ros_opencv.kdev4
ros_task/ros_opencv/launch/: ros_opencv.launch
ros_task/ros_opencv/src/: main.cpp
ros_task/ros_opencv/src/Armor/: ArmorDetect.cpp  ArmorDetect.hpp
ros_task/ros_opencv/src/Camera/: Camera.cpp  Camera.hpp
ros_task/ros_opencv/src/Pose/: AngleSolver.cpp  AngleSolver.hpp
ssh/: password-free  scp  vim
